[package]
name = "ptcg"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
colored = "3.1.1"
crossterm = "0.29.0"
dotenvy = { version = "0.15.7", features = ["clap"] }
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json", "charset"] }
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
urlencoding = "2.1.3"
