[package]
name = "ptcg"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
dotenvy = { version = "0.15.7", features = ["clap"] }
image = "0.25.10"
inquire = "0.9.4"
reqwest = { version = "0.13.2", features = ["json", "charset"] }
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
urlencoding = "2.1.3"
viuer = { version = "0.9.2", features = ["print-file"] }
